--- a/Dev_Team/04_QA.md
+++ b/Dev_Team/04_QA.md
@@ -11,3 +11,13 @@
 
 ## Software Testing
 
+## Test Automation 
+* Introduction Test Automation 
+* Test Automation Strategy 
+* Common Tools and Frameworks
+* Test Automation for Web
+* Test Automation for Mobile 
+* Test Automation for APIs
+* Test Automation for Performance
+* CI/CD and Test Automation
+* Common Issues and  (Cạm bẫy)
